--- a/frontend/css/formLogin.css
+++ b/frontend/css/formLogin.css
@@ -45,8 +45,8 @@ a {
 
 button {
     border-radius: 20px;
-    border: 1px solid #FF4B2B;
-    background-color: #FF4B2B;
+    border: 1px solid #004d5c;
+    background-color: #006b7f;
     color: #FFFFFF;
     font-size: 12px;
     font-weight: bold;
@@ -162,9 +162,9 @@ input {
 }
 
 .overlay {
-    background: #FF416C;
-    background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-    background: linear-gradient(to right, #FF4B2B, #FF416C);
+    background: var(--primary-color);
+    background: -webkit-linear-gradient(to right, #004d5c,#006b7f);
+    background: linear-gradient(to right, #004d5c, #006b7f);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
@@ -176,6 +176,7 @@ input {
     transform: translateX(0);
     transition: transform 0.6s ease-in-out;
 }
+
 
 .container.right-panel-active .overlay {
     transform: translateX(50%);
